tests/NormalTests/paczka1/fuzzy1/56758520.err
Error in line 12: S4PGq S8K7 K0,3
Error in line 7: GFhsTd A657 3,1
Error in line 13: GFhsTd S43 31,3
Error in line 15: w280r7FC9 S177 93,0
Error in line 31: ZFXHtTE S177 81,9
Error in line 23: S4PGq S827 92,8
